--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
         "sourceType": "module"
     },
     "rules": {
+        "arrow-body-style": "off",
         "brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
         "comma-dangle": ["error", "never"],
         "consistent-return": "off",
@@ -35,13 +36,15 @@
 		"no-lonely-if": "error",
 		"no-multi-spaces": "error",
         "no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
+        "no-plusplus": "off",
         "no-restricted-syntax": "off",
 		"no-shadow": ["error", { "allow": ["err", "resolve", "reject"] }],
         "no-tabs": "off",
 		"no-trailing-spaces": ["error"],
 		"no-var": "error",
 		"object-curly-spacing": ["error", "always"],
-		"prefer-const": "error",
+        "prefer-const": "error",
+        "prefer-template": "off",
 		"quotes": ["error", "single"],
 		"semi": ["error", "always"],
 		"space-before-blocks": "error",
